// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the languages facet with the selected languages 1`] = `
<Filter
  facet={
    {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        [
          {
            "label": "Flex",
            "value": "flex",
          },
          {
            "label": "PHP",
            "value": "php",
          },
          {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      property="languages"
      query={
        {
          "languages": [
            "java",
            "cs",
          ],
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
  value={
    [
      "java",
      "cs",
    ]
  }
/>
`;

exports[`should render the languages facet with the selected languages 2`] = `
<div
  className="search-navigator-facet-box"
  data-key="languages"
>
  <FilterHeader
    name="projects.facets.languages"
  />
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      className="active"
      key="java"
    >
      <button
        aria-checked={true}
        aria-label="projects.facets.label_text_x.projects.facets.languages.Java"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key="java"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            option={
              {
                "key": "java",
                "name": "Java",
              }
            }
            optionKey="java"
          />
        </span>
        <span
          className="facet-stat"
        >
          39
        </span>
      </button>
    </li>
    <li
      className="active"
      key="cs"
    >
      <button
        aria-checked={true}
        aria-label="projects.facets.label_text_x.projects.facets.languages.C#"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key="cs"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            option={
              {
                "key": "cs",
                "name": "C#",
              }
            }
            optionKey="cs"
          />
        </span>
        <span
          className="facet-stat"
        >
          4
        </span>
      </button>
    </li>
    <li
      key="js"
    >
      <button
        aria-checked={false}
        aria-label="projects.facets.label_text_x.projects.facets.languages.JavaScript"
        className="facet search-navigator-facet projects-facet button-link"
        data-key="js"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          <SearchableFilterOption
            option={
              {
                "key": "js",
                "name": "JavaScript",
              }
            }
            optionKey="js"
          />
        </span>
        <span
          className="facet-stat"
        >
          1
        </span>
      </button>
    </li>
  </ul>
  <SearchableFilterFooter
    onQueryChange={[MockFunction]}
    options={
      [
        {
          "label": "Flex",
          "value": "flex",
        },
        {
          "label": "PHP",
          "value": "php",
        },
        {
          "label": "Python",
          "value": "py",
        },
      ]
    }
    property="languages"
    query={
      {
        "languages": [
          "java",
          "cs",
        ],
      }
    }
  />
</div>
`;

exports[`should render the languages without the ones in the facet 1`] = `
<Filter
  facet={
    {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        [
          {
            "label": "Flex",
            "value": "flex",
          },
          {
            "label": "PHP",
            "value": "php",
          },
          {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      property="languages"
      query={
        {
          "languages": null,
        }
      }
    />
  }
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  renderAccessibleLabel={[Function]}
  renderOption={[Function]}
/>
`;
